// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Badge passes the snapshot test for different color schemes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "marginBottom": "s",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": "s",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#38A169",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "marginBottom": "s",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#38A169",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#38A169",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#38A169",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": "s",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#FFB407",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "marginBottom": "s",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#FFB407",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#FFB407",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFB407",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": "s",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#3FB5FF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "marginBottom": "s",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#3FB5FF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#3FB5FF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3FB5FF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": "s",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#FF4B42",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "marginBottom": "s",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#FF4B42",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#FF4B42",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FF4B42",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": "s",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Badge passes the snapshot test for different sizes 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 20,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 20,
            "justifyContent": "center",
            "minWidth": 20,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 20,
              "justifyContent": "center",
              "minWidth": 20,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 20,
              "justifyContent": "center",
              "minWidth": 20,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 20,
          "justifyContent": "center",
          "minWidth": 20,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 6,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 6,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 11.5,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 20,
            "paddingHorizontal": 6,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 25,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 25,
            "justifyContent": "center",
            "minWidth": 25,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 25,
              "justifyContent": "center",
              "minWidth": 25,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 25,
              "justifyContent": "center",
              "minWidth": 25,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 25,
          "justifyContent": "center",
          "minWidth": 25,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 8,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 8,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 8,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 35,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 35,
            "justifyContent": "center",
            "minWidth": 35,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 35,
              "justifyContent": "center",
              "minWidth": 35,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 35,
              "justifyContent": "center",
              "minWidth": 35,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 35,
          "justifyContent": "center",
          "minWidth": 35,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 12,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 12,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 12,
          }
        }
        variant="p3"
      >
        2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Badge passes the snapshot test for different values types 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    />
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        23
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2+
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text />
    </View>
  </View>
</View>
`;

exports[`Molecules/Badge passes the snapshot test for different variants 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 1000,
            "height": 30,
            "justifyContent": "center",
            "marginBottom": "s",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 1000,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": "s",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        2
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "height": 30,
      }
    }
  >
    <View
      animatedStyle={
        {
          "value": {
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 8,
            "height": 30,
            "justifyContent": "center",
            "marginBottom": "s",
            "minWidth": 30,
          },
        }
      }
      collapsable={false}
      state={
        {
          "__state": {
            "_isReanimatedSharedValue": true,
            "_value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
            "addListener": [Function],
            "modify": [Function],
            "removeListener": [Function],
            "value": {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "height": 30,
              "justifyContent": "center",
              "marginBottom": "s",
              "minWidth": 30,
            },
          },
        }
      }
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#6A7BFF",
          "borderRadius": 8,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": "s",
          "minWidth": 30,
        }
      }
      transition={
        {
          "dampingRatio": 1,
          "duration": 100,
          "type": "spring",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        animate={
          {
            "color": "#FFFFFF",
            "paddingHorizontal": 10,
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#FFFFFF",
              "paddingHorizontal": 10,
            },
          }
        }
        collapsable={false}
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Poppins-Medium",
            "fontSize": 13.799999999999999,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 10,
          }
        }
        variant="p4"
      >
        NEW
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Badge withBadge HOC works as expected 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
  >
    <View
      animate={
        {
          "alignSelf": "flex-start",
        }
      }
      animatedStyle={
        {
          "value": {
            "alignSelf": "flex-start",
          },
        }
      }
      collapsable={false}
      style={
        {
          "alignSelf": "flex-start",
        }
      }
    >
      <Text />
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "height": 25,
            "position": "absolute",
            "right": -5,
            "top": -5,
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "alignItems": "center",
                "backgroundColor": "#6A7BFF",
                "borderRadius": 1000,
                "height": 25,
                "justifyContent": "center",
                "minWidth": 25,
                "position": "absolute",
                "right": -5,
                "top": -5,
                "zIndex": 1300,
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "right": -5,
                  "top": -5,
                  "zIndex": 1300,
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "right": -5,
                  "top": -5,
                  "zIndex": 1300,
                },
              },
            }
          }
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 25,
              "justifyContent": "center",
              "minWidth": 25,
              "position": "absolute",
              "right": -5,
              "top": -5,
              "zIndex": 1300,
            }
          }
          transition={
            {
              "dampingRatio": 1,
              "duration": 100,
              "type": "spring",
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            animate={
              {
                "color": "#FFFFFF",
                "paddingHorizontal": 8,
              }
            }
            animatedStyle={
              {
                "value": {
                  "color": "#FFFFFF",
                  "paddingHorizontal": 8,
                },
              }
            }
            collapsable={false}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Poppins-Medium",
                "fontSize": 13.799999999999999,
                "fontStyle": "normal",
                "fontWeight": "500",
                "includeFontPadding": false,
                "letterSpacing": 0,
                "lineHeight": 22,
                "paddingHorizontal": 8,
              }
            }
            variant="p4"
          >
            28
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
  >
    <View
      animate={
        {
          "alignSelf": "flex-start",
        }
      }
      animatedStyle={
        {
          "value": {
            "alignSelf": "flex-start",
          },
        }
      }
      collapsable={false}
      style={
        {
          "alignSelf": "flex-start",
        }
      }
    >
      <Text />
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "bottom": -5,
            "height": 30,
            "position": "absolute",
            "right": -5,
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "alignItems": "center",
                "backgroundColor": "#6A7BFF",
                "borderRadius": 1000,
                "bottom": -5,
                "height": 30,
                "justifyContent": "center",
                "minWidth": 30,
                "position": "absolute",
                "right": -5,
                "zIndex": 1300,
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "bottom": -5,
                  "height": 30,
                  "justifyContent": "center",
                  "minWidth": 30,
                  "position": "absolute",
                  "right": -5,
                  "zIndex": 1300,
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "bottom": -5,
                  "height": 30,
                  "justifyContent": "center",
                  "minWidth": 30,
                  "position": "absolute",
                  "right": -5,
                  "zIndex": 1300,
                },
              },
            }
          }
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "bottom": -5,
              "height": 30,
              "justifyContent": "center",
              "minWidth": 30,
              "position": "absolute",
              "right": -5,
              "zIndex": 1300,
            }
          }
          transition={
            {
              "dampingRatio": 1,
              "duration": 100,
              "type": "spring",
            }
          }
        >
          <Text />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Badge withBadge HOC works as expected with different placements 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
  >
    <View
      animate={
        {
          "alignSelf": "flex-start",
        }
      }
      animatedStyle={
        {
          "value": {
            "alignSelf": "flex-start",
          },
        }
      }
      collapsable={false}
      style={
        {
          "alignSelf": "flex-start",
        }
      }
    >
      <Text
        accessibilityLabel="inbox Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "color": "#1A2138",
            "marginBottom": "l",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#1A2138",
              "marginBottom": "l",
            },
          }
        }
        collapsable={false}
        onLayout={[Function]}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 25.299999999999997,
            },
            {
              "color": "#1A2138",
              "marginBottom": "l",
            },
            {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "height": 25,
            "left": -5,
            "position": "absolute",
            "top": -5,
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "alignItems": "center",
                "backgroundColor": "#6A7BFF",
                "borderRadius": 1000,
                "height": 25,
                "justifyContent": "center",
                "left": -5,
                "minWidth": 25,
                "position": "absolute",
                "top": -5,
                "zIndex": 1300,
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "height": 25,
                  "justifyContent": "center",
                  "left": -5,
                  "minWidth": 25,
                  "position": "absolute",
                  "top": -5,
                  "zIndex": 1300,
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "height": 25,
                  "justifyContent": "center",
                  "left": -5,
                  "minWidth": 25,
                  "position": "absolute",
                  "top": -5,
                  "zIndex": 1300,
                },
              },
            }
          }
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 25,
              "justifyContent": "center",
              "left": -5,
              "minWidth": 25,
              "position": "absolute",
              "top": -5,
              "zIndex": 1300,
            }
          }
          transition={
            {
              "dampingRatio": 1,
              "duration": 100,
              "type": "spring",
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            animate={
              {
                "color": "#FFFFFF",
                "paddingHorizontal": 8,
              }
            }
            animatedStyle={
              {
                "value": {
                  "color": "#FFFFFF",
                  "paddingHorizontal": 8,
                },
              }
            }
            collapsable={false}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Poppins-Medium",
                "fontSize": 13.799999999999999,
                "fontStyle": "normal",
                "fontWeight": "500",
                "includeFontPadding": false,
                "letterSpacing": 0,
                "lineHeight": 22,
                "paddingHorizontal": 8,
              }
            }
            variant="p4"
          >
            28
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
  >
    <View
      animate={
        {
          "alignSelf": "flex-start",
        }
      }
      animatedStyle={
        {
          "value": {
            "alignSelf": "flex-start",
          },
        }
      }
      collapsable={false}
      style={
        {
          "alignSelf": "flex-start",
        }
      }
    >
      <Text
        accessibilityLabel="inbox Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "color": "#1A2138",
            "marginBottom": "l",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#1A2138",
              "marginBottom": "l",
            },
          }
        }
        collapsable={false}
        onLayout={[Function]}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 25.299999999999997,
            },
            {
              "color": "#1A2138",
              "marginBottom": "l",
            },
            {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "height": 25,
            "position": "absolute",
            "right": -5,
            "top": -5,
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "alignItems": "center",
                "backgroundColor": "#6A7BFF",
                "borderRadius": 1000,
                "height": 25,
                "justifyContent": "center",
                "minWidth": 25,
                "position": "absolute",
                "right": -5,
                "top": -5,
                "zIndex": 1300,
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "right": -5,
                  "top": -5,
                  "zIndex": 1300,
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "right": -5,
                  "top": -5,
                  "zIndex": 1300,
                },
              },
            }
          }
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "height": 25,
              "justifyContent": "center",
              "minWidth": 25,
              "position": "absolute",
              "right": -5,
              "top": -5,
              "zIndex": 1300,
            }
          }
          transition={
            {
              "dampingRatio": 1,
              "duration": 100,
              "type": "spring",
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            animate={
              {
                "color": "#FFFFFF",
                "paddingHorizontal": 8,
              }
            }
            animatedStyle={
              {
                "value": {
                  "color": "#FFFFFF",
                  "paddingHorizontal": 8,
                },
              }
            }
            collapsable={false}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Poppins-Medium",
                "fontSize": 13.799999999999999,
                "fontStyle": "normal",
                "fontWeight": "500",
                "includeFontPadding": false,
                "letterSpacing": 0,
                "lineHeight": 22,
                "paddingHorizontal": 8,
              }
            }
            variant="p4"
          >
            28
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
  >
    <View
      animate={
        {
          "alignSelf": "flex-start",
        }
      }
      animatedStyle={
        {
          "value": {
            "alignSelf": "flex-start",
          },
        }
      }
      collapsable={false}
      style={
        {
          "alignSelf": "flex-start",
        }
      }
    >
      <Text
        accessibilityLabel="inbox Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "color": "#1A2138",
            "marginBottom": "l",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#1A2138",
              "marginBottom": "l",
            },
          }
        }
        collapsable={false}
        onLayout={[Function]}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 25.299999999999997,
            },
            {
              "color": "#1A2138",
              "marginBottom": "l",
            },
            {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "bottom": -5,
            "height": 25,
            "left": -5,
            "position": "absolute",
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "alignItems": "center",
                "backgroundColor": "#6A7BFF",
                "borderRadius": 1000,
                "bottom": -5,
                "height": 25,
                "justifyContent": "center",
                "left": -5,
                "minWidth": 25,
                "position": "absolute",
                "zIndex": 1300,
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "bottom": -5,
                  "height": 25,
                  "justifyContent": "center",
                  "left": -5,
                  "minWidth": 25,
                  "position": "absolute",
                  "zIndex": 1300,
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "bottom": -5,
                  "height": 25,
                  "justifyContent": "center",
                  "left": -5,
                  "minWidth": 25,
                  "position": "absolute",
                  "zIndex": 1300,
                },
              },
            }
          }
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "bottom": -5,
              "height": 25,
              "justifyContent": "center",
              "left": -5,
              "minWidth": 25,
              "position": "absolute",
              "zIndex": 1300,
            }
          }
          transition={
            {
              "dampingRatio": 1,
              "duration": 100,
              "type": "spring",
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            animate={
              {
                "color": "#FFFFFF",
                "paddingHorizontal": 8,
              }
            }
            animatedStyle={
              {
                "value": {
                  "color": "#FFFFFF",
                  "paddingHorizontal": 8,
                },
              }
            }
            collapsable={false}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Poppins-Medium",
                "fontSize": 13.799999999999999,
                "fontStyle": "normal",
                "fontWeight": "500",
                "includeFontPadding": false,
                "letterSpacing": 0,
                "lineHeight": 22,
                "paddingHorizontal": 8,
              }
            }
            variant="p4"
          >
            28
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
  >
    <View
      animate={
        {
          "alignSelf": "flex-start",
        }
      }
      animatedStyle={
        {
          "value": {
            "alignSelf": "flex-start",
          },
        }
      }
      collapsable={false}
      style={
        {
          "alignSelf": "flex-start",
        }
      }
    >
      <Text
        accessibilityLabel="inbox Icon"
        accessible={true}
        allowFontScaling={false}
        animate={
          {
            "color": "#1A2138",
            "marginBottom": "l",
          }
        }
        animatedStyle={
          {
            "value": {
              "color": "#1A2138",
              "marginBottom": "l",
            },
          }
        }
        collapsable={false}
        onLayout={[Function]}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 25.299999999999997,
            },
            {
              "color": "#1A2138",
              "marginBottom": "l",
            },
            {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "bottom": -5,
            "height": 25,
            "position": "absolute",
            "right": -5,
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "alignItems": "center",
                "backgroundColor": "#6A7BFF",
                "borderRadius": 1000,
                "bottom": -5,
                "height": 25,
                "justifyContent": "center",
                "minWidth": 25,
                "position": "absolute",
                "right": -5,
                "zIndex": 1300,
              },
            }
          }
          collapsable={false}
          onLayout={[Function]}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "bottom": -5,
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "right": -5,
                  "zIndex": 1300,
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "bottom": -5,
                  "height": 25,
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "right": -5,
                  "zIndex": 1300,
                },
              },
            }
          }
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 1000,
              "bottom": -5,
              "height": 25,
              "justifyContent": "center",
              "minWidth": 25,
              "position": "absolute",
              "right": -5,
              "zIndex": 1300,
            }
          }
          transition={
            {
              "dampingRatio": 1,
              "duration": 100,
              "type": "spring",
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            animate={
              {
                "color": "#FFFFFF",
                "paddingHorizontal": 8,
              }
            }
            animatedStyle={
              {
                "value": {
                  "color": "#FFFFFF",
                  "paddingHorizontal": 8,
                },
              }
            }
            collapsable={false}
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "Poppins-Medium",
                "fontSize": 13.799999999999999,
                "fontStyle": "normal",
                "fontWeight": "500",
                "includeFontPadding": false,
                "letterSpacing": 0,
                "lineHeight": 22,
                "paddingHorizontal": 8,
              }
            }
            variant="p4"
          >
            28
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
